--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,15 @@ spring.mail.password=pmpfhsdphuozgmzh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+# dev tools
+#spring.datasource.url=jdbc:mysql://localhost:3306/grit
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+# prod tools
 spring.datasource.url=jdbc:mysql://localhost:3306/grit
 spring.datasource.username=root
 spring.datasource.password=password
