--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,18 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 # dev tools
-#spring.datasource.url=jdbc:mysql://localhost:3306/grit
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-
-# prod tools
-spring.datasource.url=mysql://root:15Be3HGa5fC3hegdChb5B4-24D4BCfEA@roundhouse.proxy.rlwy.net:48270/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/grit
 spring.datasource.username=root
-spring.datasource.password=15Be3HGa5fC3hegdChb5B4-24D4BCfEA
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# prod tools
+#spring.datasource.url=mysql://root:15Be3HGa5fC3hegdChb5B4-24D4BCfEA@roundhouse.proxy.rlwy.net:48270/railway
+#spring.datasource.username=root
+#spring.datasource.password=15Be3HGa5fC3hegdChb5B4-24D4BCfEA
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.session.timeout=30m
 
