--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.jpa.hibernate.ddl-auto=update
 
 # prod tools
-spring.datasource.url=jdbc:mysql://root:15Be3HGa5fC3hegdChb5B4-24D4BCfEA@roundhouse.proxy.rlwy.net:48270/railway
-spring.datasource.username=root
-spring.datasource.password=15Be3HGa5fC3hegdChb5B4-24D4BCfEA
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
