--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gritdominate@gmail.com
-spring.mail.password=pmpfhsdphuozgmzh
+spring.mail.username=${GMAIL_USERNAME}
+spring.mail.password=${GMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -13,10 +13,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
 
-# prod tools
-spring.datasource.url=jdbc:mysql://localhost:3306/grit
-spring.datasource.username=root
-spring.datasource.password=password
+# test
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
